fixed depts on smaller devices + removed hover effect on mobile

--- a/src/components/Apply/styles/LandingPage.css
+++ b/src/components/Apply/styles/LandingPage.css
@@ -1,9 +1,13 @@
 .landing-page{
     min-height: 100vh;
-    
+    overflow-x: hidden;
     background: rgb(251,187,6);
     background: linear-gradient(180deg, rgba(251,187,6,1) 0%, rgba(251,172,6,1) 10%, rgba(251,98,6,1) 100%);
     color: white;
+}
+
+.depts-list {
+    max-width: 100%;
 }
 
 .depts-list li{
@@ -13,9 +17,11 @@
     text-align: left;
 }
 
-.depts-list li:hover {
-    transition: transform 500ms ease-out;
-    transform: translateY(-0.6rem);
+@media (hover: hover) {
+    .depts-list li:hover {
+        transition: transform 500ms ease-out;
+        transform: translateY(-0.6rem);
+    }
 }
 
 .depts-list li:hover a {
@@ -42,5 +48,17 @@
     .depts-col {
         margin-top: 0;
         margin-left: 4em;
+    }
+}
+
+@media (max-width: 500px) {
+    .depts-list li {
+        font-size: 2.8rem;
+    }
+}
+
+@media (max-width: 374px) {
+    .depts-list li {
+        font-size: 2.5rem;
     }
 }
